# secops-multi-agent-001

./: .gitignore  CLAUDE.md  PLAN.md  RUNNING_LOCALLY-REAL.md  docker-compose.yml  skills-lock.json
.claude/agents/: azure-infra.md  backend-engineer.md  eval-engineer.md  frontend-engineer.md  security-reviewer.md
.github/workflows/: azure-static-web-apps-thankful-glacier-0b885f000.yml  deploy-backend.yml  deploy-frontend.yml  eval.yml  secops-backend-AutoDeployTrigger-b1a22bc0-a3d0-49b9-84fb-eb8852eea9a6.yml
apps/web/: .env.example  DEPLOY_TRIGGER.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/dashboard/compliance/: page.tsx
apps/web/app/dashboard/history/: page.tsx
apps/web/app/dashboard/run/: page.tsx
apps/web/app/dashboard/threats/: page.tsx
apps/web/components/: password-dialog.tsx
apps/web/components/dashboard/: agent-rail.tsx  approval-panel.tsx  auth-gate.tsx  cost-panel.tsx  cve-table.tsx  cvss-gauge.tsx  data-mode-toggle.tsx  findings-feed.tsx  guardrail-flags.tsx  mode-badge.tsx  nav.tsx  page-header.tsx  plan-view.tsx  run-result.tsx  similar-incidents.tsx  source-rows.tsx  status-badge.tsx
apps/web/components/providers/: password-provider.tsx
apps/web/components/ui/: card.tsx
apps/web/e2e/: run-flow.spec.ts
apps/web/hooks/: use-run.ts
apps/web/lib/: api.ts  format.ts  plan.ts  types.ts
backend/: .dockerignore  .env.example  DEPLOY_TRIGGER.md  Dockerfile  README.md  pyproject.toml
backend/fixtures/: compliance.json  incidents.json  mock_incident.json
backend/fixtures/azure_logs/: azure_activity.json  failed_signins_burst.json  impossible_travel.json  open_incidents.json  privilege_grants.json
backend/fixtures/corpus/: advisories.md  iso_27001.md  nist_csf.md  soc2.md
backend/fixtures/guardrail/: benign.txt  injected.txt
backend/fixtures/scanner/: pip_audit.json  trivy.json
backend/fixtures/threat_intel/: epss.json  kev.json  nvd_CVE-2026-00000.json
backend/secops/: __init__.py  agents.py  app.py  config.py  cost.py  graph.py  guardrail.py  llm.py  memory.py  schemas.py  server.py  state.py
backend/secops/rag/: __init__.py  index.py
backend/secops/tools/: __init__.py  azure_logs.py  scanner.py  threat_intel.py
backend/tests/: conftest.py  test_api.py  test_checkpoint_postgres.py  test_cost.py  test_data_mode.py  test_guardrail.py  test_memory.py  test_rag.py  test_smoke.py  test_tools.py
docs/plans/: phase-1-foundation.md  phase-2-tools-rag-features.md
evals/: BASELINE.md  README.md  __init__.py  _bootstrap.py  conftest.py  evaluators.py  experiment.py  report_baseline.py  run_judge_baseline.py  runner.py  test_agents.py
evals/datasets/: golden.jsonl
infra/: README.md  bootstrap-oidc.sh  budget.bicep  deploy.sh  ingest_synthetic.py  ingestion.bicep  main.bicep  main.parameters.json  teardown.sh
scripts/: seed_synthetic.py
