[project]
name = "secops"
version = "0.1.0"
description = "SecOps Multi-Agent — LangGraph supervisor over five cybersecurity agents (Phase 1: mock mode)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "llama-index>=0.14.22",
    "llama-index-vector-stores-lancedb>=0.5.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "lancedb>=0.33.0",
    "sentence-transformers>=5.5.1",
    "azure-monitor-query>=2.0.0",
    "azure-identity>=1.25.3",
    "httpx>=0.28.1",
    "tiktoken>=0.13.0",
    "pandas>=3.0.3",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secops"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Type-checking is ADVISORY in Phase 1 — does not block the commit.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
