[project]
name = "secops"
version = "0.1.0"
description = "SecOps Multi-Agent — LangGraph supervisor over five cybersecurity agents (Phase 1: mock mode)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "llama-index>=0.14.22",
    "llama-index-vector-stores-lancedb>=0.5.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "lancedb>=0.33.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.2",
    "azure-monitor-query>=2.0.0",
    "azure-identity>=1.25.3",
    "httpx>=0.28.1",
    "tiktoken>=0.13.0",
    "pandas>=3.0.3",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "azure-monitor-ingestion>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "langsmith>=0.8.15",
]

# Pull PyTorch from the CPU-only wheel index on the container's platform (linux) so the
# image doesn't bundle multi-GB CUDA libraries. macOS stays on the default (already CPU).
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secops"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Type-checking is ADVISORY in Phase 1 — does not block the commit.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
